--- a/css/bear.css
+++ b/css/bear.css
@@ -12,6 +12,8 @@ html {
 
 @media only screen and (max-width: 1190px) {
   #bear {
-    position: fixed;
+    position: absolute;
+    top: 100px;
+    right: 30;
   }
 }
