--- a/css/bear.css
+++ b/css/bear.css
@@ -10,7 +10,7 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 150) {
+@media only screen and (max-width: 385px) {
   #bear {
     position: initial;
 
