--- a/css/bear.css
+++ b/css/bear.css
@@ -12,7 +12,7 @@ html {
 
 @media only screen and (max-width: 385px) {
   #bear {
-    position: relative 20px;
+    position: relative left:20px;
 
   }
 }
