--- a/css/bear.css
+++ b/css/bear.css
@@ -12,7 +12,9 @@ html {
 
 @media only screen and (max-width: 385px) {
   #bear {
-    position: static;
+    position: fixed;
+    left: 10px;
+    top: 100px
 
   }
 }
