--- a/css/bear.css
+++ b/css/bear.css
@@ -12,9 +12,8 @@ html {
 
 @media only screen and (max-width: 385px) {
   #bear {
-    position: fixed;
-    left: 10px;
-    top: 100px;
+    position: absolute;
+    right: 400px;
 
   }
 }
