--- a/css/bear.css
+++ b/css/bear.css
@@ -10,12 +10,9 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 385px) {
+@media screen and (max-width: 385px) {
   #bear {
     position: fixed;
-    width: 300px;
-    bottom: 0;
-    right: 0;
 
   }
 }
