--- a/css/bear.css
+++ b/css/bear.css
@@ -10,10 +10,10 @@ html {
 
 /* Write your solution here */
 
-@media screen and (max-width: 385px) {
+@media screen and (max-width: 1196px) {
   #bear {
     position: fixed;
-    top:100px;
+    left: 800px;
     right: auto;
 
   }
