--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -12,7 +12,7 @@ html {
 @media screen and (max-width: 1320px) {
   #ostrich {
     position: absolute;
-    top: 200px;
+    bottom: 100px;
     right: 0;
   }
 }
