--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -11,7 +11,7 @@ html {
 /* Write your solution here */
 @media screen and (max-width: 1320px) {
   #ostrich {
-    position: absolute;
+    position: fixed;
     bottom: 300px;
     right: 0;
   }
