--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -12,7 +12,7 @@ html {
 @media screen and (max-width: 1320px) {
   #ostrich {
     position: fixed;
-    bottom: 300px;
+    top: -100px;
     right: 0;
   }
 }
