Automatically backed up by Learn

--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -16,3 +16,10 @@ html {
     right: 0;
   }
 }
+@media screen and (max-width: 1033px) {
+  #ostrich {
+    position: fixed;
+    top: -75px;
+    right: 0;
+  }
+}
