--- a/css/monkey.css
+++ b/css/monkey.css
@@ -16,3 +16,11 @@ html {
     right: 120px;
   }
 }
+
+@media screen and (min-width: 406px) {
+  #monkey {
+    position: fixed;
+    top: 550px;
+    right: 120px;
+  }
+}
