--- a/css/monkey.css
+++ b/css/monkey.css
@@ -17,7 +17,7 @@ html {
   }
 }
 
-@media screen and (min-width: 406px) {
+@media screen and (max-width: 406px) {
   #monkey {
     position: fixed;
     top: 550px;
