--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,18 +9,10 @@ html {
 }
 
 /* Write your solution here */
-@media screen and (max-width: 1170px) {
+@media screen and (max-width: 1170px )and  (max-width: 406px){
   #monkey {
     position: fixed;
     top: -150px;
-    right: 120px;
-  }
-}
-
-@media screen and (max-width: 406px) {
-  #monkey {
-    position: fixed;
-    top: 550px;
     right: 120px;
   }
 }
