--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,7 +9,7 @@ html {
 }
 
 /* Write your solution here */
-@media screen and (max-width: 1170px ) and  (max-width: 406px){
+@media screen and (max-width: 1170px ) and  (min-width: 406px){
   #monkey {
     position: fixed;
     top: -150px;
