--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,7 +9,7 @@ html {
 }
 
 /* Write your solution here */
-@media screen and (min-width: 406px ) and (max-width: 1170px){
+@media screen and (max-width: 406px ) and (min-width: 1170px){
   #monkey {
     position: fixed;
     top: -150px;
