--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,9 @@ html {
 }
 
 /* Write your solution here */
-
+@media screen and (min-width: 1090px) {
+  #dolphin {
+    position: fixed;
+    top: -100px;
+  }
+}
